[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = {  version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
panic-halt = "1.0.0"
stm32f401_pac = { path = "../stm32f401_pac", features = ["rt", "critical-section"] }

[profile.dev]
panic="abort"