[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blinky"
path = "src/main.rs"
test = false
doctest = false
bench = false

[dependencies]
cortex-m = {  version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["device"] }
panic-halt = "1.0.0"
stm32f401_pac = { git = "https://github.com/spark404/stm32f401re_pac.git", features = ["rt", "critical-section"] }
semihosting = { version = "0.1", optional = true }

[profile.dev]
panic="abort"
